RESOLVED FIXED128071
Subpixel rendering: Floor thickness and length after switching from int to float.
https://bugs.webkit.org/show_bug.cgi?id=128071
Summary Subpixel rendering: Floor thickness and length after switching from int to fl...
alan
Reported 2014-02-02 09:36:13 PST
This is a temporary solution to fix the assertion on empty line drawing until after bug 128009 is landed.
Attachments
alan
Comment 1 2014-02-02 09:40:02 PST
Darin Adler
Comment 2 2014-02-02 10:57:13 PST
On a float it should be floorf. Calling floor will convert to a double, then floor, and then convert back to a float.
alan
Comment 3 2014-02-02 11:01:04 PST
(In reply to comment #2) > On a float it should be floorf. Calling floor will convert to a double, then floor, and then convert back to a float. hmm, how did I miss that! Thanks. I am planning to land the proper fix for this later today.
Note You need to log in before you can comment on or make changes to this bug.