Floor thickness and length after switching from int to float. https://bugs.webkit.org/show_bug.cgi?id=128071

Reviewed by Antti Koivisto.

This is a temporary solution to fix the assertion on empty line drawing until after
device pixel snapping is added.

Covered by existing tests.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::drawLineForBoxSide):

Canonical link: https://commits.webkit.org/146082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163264 268f45cc-cd09-0410-ab3c-d52691b4dbfc